@@ -48,6 +48,8 @@ xx/xx/2006 - 1.13.1-WIP
 	  correct order.  Essential for hunting bugs in directory operations
 	  code...  (Anton)
 	- configure.ac fix for Cygwin.  (Yuval)
+	- Fix bug with renaming directories with names in DOS and WIN32
+	  namespaces.  (Yura)
 
 27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.
 
